fix: fix not showing notifications on Admin route

--- a/client/src/pages/Profile/profile.scss
+++ b/client/src/pages/Profile/profile.scss
@@ -9,6 +9,7 @@
     flex-direction: column;
     align-items: center;
     gap: 1rem;
+    text-align: center;
 
     .profile__image {
       max-width: 256px;
